--- a/graphpage.html
+++ b/graphpage.html
@@ -20,23 +20,19 @@
 	<script>
 
 		var barChartData = {
-			labels : ["Average Home (kWh)","Evanston (kWh)","Illinois (kWh)"],
+			labels : ["Your Energy (kWh)","Class (kWh)"],
 			datasets : [
 				{
 					fillColor : "rgba(220,220,220,0.5)",
 					strokeColor : "rgba(220,220,220,1)",
-					data : [903,25880883,4311170325]
-				},
-				{
-					fillColor : "rgba(151,187,205,0.5)",
-					strokeColor : "rgba(151,187,205,1)",
-					data : [200,200,200]
+					data : [212,3500]
 				}
+				
 			]
 			
 		}
 
-	var myLine = new Chart(document.getElementById("canvas").getContext("2d")).Bar(barChartData,{scaleOverride: true, scaleStartValue: 0, scaleStepWidth: 1000, scaleSteps: 30});
+	var myLine = new Chart(document.getElementById("canvas").getContext("2d")).Bar(barChartData,{scaleOverride: true, scaleStartValue: 0, scaleStepWidth: 150, scaleSteps: 30});
 	
 	</script>
 	</div>
